* Updated toolbar icons for Australis.
* Moved toolbar close button to the right to match newer Firefox versions.
* Unconfirmed changes (i.e. additions or editions) in substitution groups are automatically confirmed when pressing the dialog OK button (issue 125).

v0.15.0 (2013-08-03)
* Textboxes in the replace bar use as much width as they can.
* Change event is fired when a substitution changes text in an input or textarea element (issue 49).
* Updated icon sizes.
* Substitutions with HTML only in the output (issue 5).
* Updated help (issue 110).
* Disabled tr locale (was reported as bad translation).
* New substitution groups enabled by default in the substitution group editor.
* Improved substitution list behaviour in options dialog (issue 112).
* Changed the code to open the options dialog to take into account several features (issues 98 and 66).
* Moved the descriptions of the options and substitution group editor dialogs to a tooltip showable with a "more info" button to remove clutter.
* Made the options and substitution group editor dialogs resizable on all platforms (when open from FoxReplace UI) (issue 100). The sizes are persistent.
* Compatibility with Firefox up to 26.0.

v0.14.0 (16-1-2013)
* Removed compatibility with the substitution list in the 0.10 format.
* Substitution groups now have names. This implies a new list format: 0.14.
* Changed shortcuts because Shift+F2 is used for the developer toolbar in Firefox 16 (issue 87).
* Exclusion URLs can be used without normal URLs, so you can apply substitutions to all URLs except a few ones (issue 92).
* Replace bar again appears just below the find bar, without any other bar in between.
* New option to allow inline scripts to be replaced (issue 17).
* Updated help file to clarify some concepts about regular expressions (issue 85).
* Substitution groups can be enabled or disabled (issue 33).
* Text replaced in all body elements (issue 62).
* Pretty printing of exported JSON file (issue 96).